src/snapshots/toker__timers__tests__a_missing_row_is_a_failure_report_not_a_crash.snap
---
source: src/timers.rs
expression: out
---
slot 09:00: no window reading in the ledger, assuming none is open
slot 09:00: opening the quota window (scheduled 09:11, expecting it to end 14:10)
slot 09:00: running 1 min late (within the 10 min guard)
slot 09:00: claude exited 1
slot 09:00: no ping row landed in the ledger — the window did not open
