src/snapshots/toker__timers__tests__the_readback_polls_until_the_row_lands.snap
---
source: src/timers.rs
expression: out
---
slot 09:00: no window reading in the ledger, assuming none is open
slot 09:00: opening the quota window (scheduled 09:11, expecting it to end 14:10)
slot 09:00: running 1 min late (within the 10 min guard)
slot 09:00: claude exited 0
slot 09:00: the ledger confirms the window is open until 14:10
